--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
   ],
   "author": "Inori",
   "license": "GPLv3",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "umi": "^3.4.15"
+  },
   "devDependencies": {
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "file-loader": "^6.2.0",
     "npm-check-updates": "^11.5.10",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.4",
-    "umi": "^3.4.15"
+    "typescript": "^4.2.4"
   }
 }
