--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "stats.js": "^0.17.0",
     "umi": "^3.4.15"
   },
   "devDependencies": {
